2004-12-12 Jean-Michel Rouet <jm.rouet@noos.fr>
   * src/gdcmPixelReadConvert.[h|cxx], src/gdcmJpeg*.cxx : new handling of
     JPEG decompression, especially when dicom frames are split into several
     JPEG Fragments. This makes use of jpeg decompression from memory buffer.
     This solves reading for example gdcm-JPEG-Lossless_Thoravision.dcm.

2004-12-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmHeader.cxx : change the initialisation of default header.
     Now, this header is readable by gdm, e-film, DicomWorks

2004-12-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.[h|cxx], gdcmPixelReadConvert.[h|cxx] : change the API.
     Rename Decompressed to Raw
   * Use the API changes in gdcm::File.
   * vtk/vtkGdcmWriter.[h|cxx] : add the possibility to write in other modes
     Memory leaks fixed

2004-12-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.cxx, Example/WriteDicomSimple.cxx : add comments for
     each added entry in the header. Replace the 'Planes' field by the 'Number
     of Frames' field

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.[h|cxx] : now can write stack of images.
   * vtk/vtkWriteDicom.cxx : can write 2D stack or 3D image

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Example/WriteDicomSimple.cxx : example to write a dicom file from nothing.
     At this time, this image isn't readable by e-film... waiting JPR help to
     solve it.

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelReadConvert.cxx : bug fix when would forcing load of a
     DocEntry. Now use methods of the Document !

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicomSeq.cxx : bug fix
 
2004-12-08 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.[h|cxx] : bug fix. Plane order isn't inverted